cmake_minimum_required(VERSION 3.2)
if($ENV{TRAVIS_BUILD_NUMBER})
project(print_ip VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
else()
project(print_ip VERSION 0.0.1)
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib) 
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib) 

add_subdirectory(src)
find_package(Threads)
find_package(GTest MODULE)
if(GTest_FOUND AND Threads_FOUND)
    enable_testing()
    add_subdirectory(tests)
else()
    message(STATUS "Gtest not found! Tests will not build.")
endif()